<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Todoo</string>
    <string name="sync_label_OSMenu">Ordenes de Servicios</string>
    <string name="sync_label_Event_Type">Tipo de Eventos</string>
    <string name="sync_label_Product_Product">Productos</string>
    <string name="sync_label_OSEvent_Type">Ordenes de Servicio Eventos</string>
    <string name="sync_label_encuesta">Encuestas</string>
    <string name="sync_label_where">Where</string>
    <string name="sync_label_tasks">Tasks</string>
    <string name="sync_label_Done_Pending">Synchronization Pending</string>
    <string name="sync_label_schedule">Schedule</string>
    <string name="sync_label_project">Projects</string>
    <string name="sync_label_accountinvoice">Invoice</string>
    <string name="sync_label_accountpayment">Payment</string>
    <string name="sync_label_customers">Customers</string>
    <string name="sync_label_supplier">Suppliers</string>
    <string name="sync_label_companies">Companies</string>
    <string name="toast_information_saved">Information Saved</string>
    <string name="toast_image_size_too_large">Image size too large !</string>
    <string name="label_no_customer_found">No Customer Found !</string>
    <string name="label_no_company_found">No Company Found !</string>
    <string name="label_no_supplier_found">No Supplier Found !</string>
    <string name="label_no_project_found">No Projects Found !</string>
    <string name="label_no_invoice_found">No Invoice Found !</string>
    <string name="label_no_payment_found">No Payment Found !</string>
    <string name="label_no_task_found">No Task Found !</string>
    <string name="label_no_task_found_swipe">Swipe to check new tasks</string>
    <string name="label_no_customer_found_swipe">Swipe to check new customer</string>
    <string name="label_no_company_found_swipe">Swipe to check new company</string>
    <string name="label_no_supplier_found_swipe">Swipe to check new supplier</string>
    <string name="message_to">Message to %s</string>
    <string name="add_internal_note">Add and internal note</string>
    <string name="internal_note_hint">Add an internal note that will not be sent to the followers</string>
    <string name="label_log_note">Log note</string>
    <string name="label_send_message"><u>Send a message</u></string>
    <string name="label_log_an_internal_note"><u>Log an internal note</u></string>
    <string name="label_version_build">Build</string>
    <string name="toast_permission_download_storage">Storage permission required to create downloaded file on your sdcard.</string>
    <string name="toast_permission_download_storage_help">Storage permission required to store downloaded files on sdcard of your phone. Please grant permission for use this feature</string>
    <string name="confirm_are_you_sure_want_to_delete">Are you sure want to delete ?</string>
    <string name="confirm_are_you_sure_want_to_end">Are you sure want to done ?</string>
    <string name="toast_record_deleted">Record deleted</string>
    <string name="toast_record_validate">Could not send information. Please check! Is missing some mandatory information!</string>
    <string name="toast_record_ended">Record Doned</string>
    <string name="toast_record_synced">Sync Doned</string>
    <string name="label_phone">Phone</string>
    <string name="label_is_company">Is Company</string>
    <string name="label_website">Website</string>
    <string name="label_email">E mail</string>
    <string name="label_mobile">Mobile</string>
    <string name="main_elem_list_state">State</string>
    <string name="label_street">Street</string>
    <string name="label_street2">Street 2</string>
    <string name="label_city">City</string>
    <string name="label_zip_code">Zip code</string>
    <string name="headerComment">Commen</string>
    <string name="label_country">Country</string>
    <string name="descr_elem_list_name">Name</string>
    <string name="label_question">Question</string>
    <string name="sync_label_tasks_description">Description</string>
    <string name="label_question_type">Type field</string>
    <string name="hint_question">Complete the requested information</string>
    <string name="label_create_new">New</string>
    <string name="user_login">User Login</string>
    <string name="SERVER_URL">SERVER URL</string>
    <string name="DATABASE">DATABASE</string>
    <string name="ODOO_VERSION">ODOO VERSION</string>
    <string name="title_sync_settings">Sync Settings</string>
    <string name="label_enable_or_disable_data_sync">Enable or disable data synchronization</string>
    <string name="label_set_notification_ringtone">Set notification ring tone</string>
    <string name="notification_ringtone">Notification ring tone</string>
    <string name="title_sync_interval">Sync interval</string>
    <string name="label_define_sync_interval">Define how often synchronization will be performed</string>
    <string name="label_data_sync_limit">Data Sync Limit</string>
    <string name="label_define_date_data_sync">Define how old data to be synchronized</string>
    <string name="confirm_are_you_sure_want_sync">Are you sure want to sync ?</string>
    <string name="confirm_label">Confirm</string>
    <string name="label_sync_now">Send informations ...</string>
    <string name="sync_label_date_deadline">Date DeadLine</string>
    <string name="sync_label_date_start">Date Start</string>
    <string name="sync_label_date_end">Date End</string>
    <string name="sync_label_priority">Priority</string>
    <string name="label_no_activitis_found_swipe">Swipe to check new projects</string>
    <string name="label_no_invoice_found_swipe">Swipe to check new invoice</string>
    <string name="label_no_payment_found_swipe">Swipe to check new payment</string>
    <string name="label_activitis">Activities</string>
    <string name="label_activitis_no">No Ativities found</string>
    <string name="label_activitis_no_swipe">Swipe to check new ativities</string>
    <string name="label_pages_no">No Pages found</string>
    <string name="label_pages_no_swipe">Swipe to check new pages</string>
    <string name="label_question_no">No Question found</string>
    <string name="label_question_no_swipe">Swipe to check new question</string>
    <string name="title_notification">Todoo Notification</string>
    <string name="title_task_notification">Updated Tasks</string>
    <string name="notificacion_verifid_tasks">Verify tasks</string>
    <string name="toast_network_yes">Connected to internet with success!</string>
    <string name="toast_network_not">Not connected to the internet!</string>
    <string name="question_record_save">Answer records successfully</string>
    <string name="confirm_save_question">Are you sure want to save answers?</string>
    <string name="title_save">Recording</string>
    <string name="label_save_now">Recording information ...</string>
    <string name="label_edad">Edad</string>
    <string name="label_no_so_found_swipe">Deslizar para comprobar nuevas Ordenes de Servicio</string>
    <string name="sync_label_os">Orden de Servicio</string>
    <string name="label_no_encuesta_found">No existen encuestas</string>
    <string name="label_no_os_found">No existen Ordenes de Servicio</string>
    <string name="label_no_encuesta_found_swipe">Deslizar para comprobar nuevas encuestas</string>
    <string name="label_suministro_vista">No. Suministro Vista</string>
    <string name="label_name_os_vista">No. de Orden</string>
    <string name="label_suministro_editar">No. Suministro Editar</string>
    <string name="label_os_editar">No. Orden Editar</string>
    <string name="label_nombres">Nombres</string>
    <string name="label_os_order_ref">Pedido</string>
    <string name="label_apellido_paterno">Apellido Paterno</string>
    <string name="label_apellido_materno">Apellido Materno</string>
    <string name="label_dni">No. DNI</string>
    <string name="label_telefono_fijo">Teléfono fijo</string>
    <string name="label_telefono_celular">Teléfono celular</string>
    <string name="label_email2">Correo electrónico</string>
    <string name="label_distrito">Distrito</string>
    <string name="label_direccion">Dirección residencial</string>
    <string name="fecha">Fecha</string>
    <string name="label_event">Eventos</string>
    <string name="label_direccionrecojo">Dirección recojo</string>
    <string name="label_no_os_event_found">No existen Eventos</string>
    <string name="label_no_so_event_found_swipe">Deslizar para comprobar nuevos Eventos</string>
    <string name="label_destinatario">Destinatario</string>
    <string name="label_direccion_entrega">Dirección de Entrega</string>
    <string name="label_ubigeo">Ubigeo</string>
    <string name="label_descripcion_producto">Descripción</string>
    <string name="client_contact_phone">Teléfono</string>
    <string name="amount">COD</string>
    <string name="state">Tipo de Evento</string>
    <string name="event_comment">Observaciones</string>
    <string name="label_quotation">Quotations</string>
    <string name="label_sale_orders">Sales Orders</string>
    <string name="label_new_copy_quotation">New Copy of Quotation</string>
    <string name="label_copy_quotation">Copy of quotation</string>
    <string name="label_new">New</string>
    <string name="label_no_order_line">You cannot confirm a sales order which has no line</string>
    <string name="label_quotation_confirm">Quotation confirmed !</string>
    <string name="label_confirm_sale">Confirm Sale</string>
    <string name="label_sale_confirm_sale">Confirm Sale</string>
    <string name="label_sale_new_copy_of_quotation">New Copy of Quotation</string>
    <string name="sync_label_quotation_sales_orders">Quotations/Sales Orders</string>
</resources>
