<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <!--View Layout-->
    <LinearLayout
        android:id="@+id/servicesorder_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <odoo.controls.OForm
            android:id="@+id/servicesorderForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:modelName="services.order">


            <odoo.controls.OField
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldLabelColor="@color/theme_secondary"
                app:controlLabel="@string/label_name_os_vista"
                app:fieldName="name"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_universe"></odoo.controls.OField>

            <View
                style="@style/ViewSeparator"
                android:layout_marginLeft="72dp" />

            <odoo.controls.OField
                android:id="@+id/order_ref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="order_ref"
                app:controlLabel="@string/label_os_order_ref"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_content_add"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="date"
                app:controlLabel="@string/fecha"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_date_range_black_24dp"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/direccionrecojo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="partner_delivery"
                app:controlLabel="@string/label_direccionrecojo"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_location"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/nameCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="partner_id"
                app:controlLabel="@string/sync_label_customers"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_customers"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/client_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:controlLabel="@string/label_destinatario"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="client_contact_name"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_user"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/client_contact_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:controlLabel="@string/client_contact_phone"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="client_contact_phone"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_phone"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/address_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:controlLabel="@string/label_direccion_entrega"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="address_delivery"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_location"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/client_ubigeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:controlLabel="@string/label_ubigeo"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="client_ubigeo"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_location"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:controlLabel="@string/label_descripcion_producto"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="product_description"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_assignment_black_24dp"></odoo.controls.OField>

            <odoo.controls.OField
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:controlLabel="@string/amount"
                app:fieldLabelColor="@color/theme_secondary"
                app:fieldName="amount"
                app:fieldTextAppearance="?android:textAppearanceMedium"
                app:iconResource="@drawable/ic_action_lock"></odoo.controls.OField>


        </odoo.controls.OForm>
    </LinearLayout>
    <!--Edit Layout-->
    <LinearLayout
        android:id="@+id/servicesorder_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="@dimen/statusBarHeight"
        android:visibility="gone">

        <odoo.controls.OForm
            android:id="@+id/servicesorderFormEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            app:modelName="services.order">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/parallax_view_edit"
                android:orientation="vertical">

                <odoo.controls.OField
                    android:id="@android:id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/default_8dp"
                    app:fieldName="name"
                    app:controlLabel="@string/label_os_editar"
                    app:fieldTextAppearance="?android:textAppearanceLarge"
                    app:showIcon="false"
                    app:showLabel="true"></odoo.controls.OField>

                <View
                    style="@style/ViewSeparator"
                    android:layout_marginLeft="72dp" />

                <odoo.controls.OField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fieldName="order_ref"
                    app:controlLabel="@string/label_os_order_ref"
                    app:fieldTextAppearance="?android:textAppearanceMedium"
                    app:iconResource="@drawable/ic_action_content_add"></odoo.controls.OField>

            </LinearLayout>
        </odoo.controls.OForm>

    </LinearLayout>
</LinearLayout>